compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___typed_pattern_wrong_type.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\npub fn main() {\n  use Box(x): Box<Bool>, Box(y), Box(z) <- apply(Box(1))\n  x + y + z\n}\n\nrecord Box<a> {\n  Box(a)\n}\n\nfn apply(arg, fun) {\n  fun(arg, arg, arg)\n}\n"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:3:7
  │
3 │   use Box(x): Box<Bool>, Box(y), Box(z) <- apply(Box(1))
  │       ^^^^^^^^^^^^^^^^^

Expected type:

    Box<Bool>

Found type:

    Box<Int>
