compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___use_with_function_that_doesnt_take_callback_as_last_arg_1.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 115
expression: "\nlet f = fn(a) { a + 1 }\nuse <- f\n123\n"
---
----- SOURCE CODE

let f = fn(a) { a + 1 }
use <- f
123


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:3:8
  │
3 │ use <- f
  │        ^

The function on the right hand side of `<-` has to take a callback function
as its last argument. But the last argument of this function has type:

    Int

See: https://tour.rakun.run/advanced-features/use/
